feat: Backup and mac features